tests/ui/object-lifetime/object-lifetime-default-from-rptr-box-error.stderr
error: lifetime may not live long enough
  --> $DIR/object-lifetime-default-from-rptr-box-error.rs:15:5
   |
LL | fn c<'a>(t: &'a Box<dyn Test+'a>, mut ss: SomeStruct<'a>) {
   |      -- lifetime `'a` defined here
LL |     ss.t = t;
   |     ^^^^^^^^ assignment requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

